--- a/pkg/ANN/DESCRIPTION
+++ b/pkg/ANN/DESCRIPTION
@@ -2,11 +2,12 @@ Package: ANN
 Type: Package
 Title: Feedforward Artificial Neural Network optimized by Genetic Algorithm
 Version: 0.1.4
-Date: 2012-04-06
+Date: 2012-04-23
 Author: Francis Roy-Desrosiers
 Maintainer: Francis Roy-Desrosiers <francis.roy.desrosiers@gmail.com>
 Description: This package provides a feedforward Artificial Neural Network (ANN) optimized by Genetic Algorithm (GA). Modifications in the Genetic algorithm from CUDAANN r6 have been made to improve the speed, the convergence and the memory management.
-Depends: R (>= 2.12.0)
+Depends:Rcpp
+LinkingTo: Rcpp
 License: GPL-3
 LazyLoad: yes
 
