--- a/pkg/ANN/DESCRIPTION
+++ b/pkg/ANN/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.5
 Date: 2012-04-24
 Author: Francis Roy-Desrosiers
 Maintainer: Francis Roy-Desrosiers <francis.roy.desrosiers@gmail.com>
-Description: This package provides a feedforward Artificial Neural Network (ANN) optimized by Genetic Algorithm (GA). Modifications in the Genetic algorithm from CUDAANN r6 have been made to improve the speed, the convergence and the memory management.
+Description: This package provides a feedforward Artificial Neural Network (ANN) optimized by Genetic Algorithm (GA).
 Depends:Rcpp
 LinkingTo: Rcpp
 License: GPL-3
